# smallDB

./: Cargo.toml  README.md
example/: basic_operation.rs
src/: batch.rs  db.rs  errors.rs  iterator.rs  lib.rs  main.rs  merge.rs  meta_command.rs  options.rs  parser.rs  query_handler.rs  row.rs  table.rs
src/bitcask/: batch.rs  db.rs  error.rs  errors.rs  iterator.rs  merge.rs  mod.rs  options.rs
src/bitcask/data/: data_file.rs  log_record.rs
src/bitcask/fio/: file_io.rs  mmap.rs  mod.rs
src/bitcask/index/: bptree.rs  btree.rs  mod.rs  skiplist.rs
src/bitcask/utils/: file.rs  rand_kv.rs
src/data/: data_file.rs  log_record.rs
src/fio/: file_io.rs  mmap.rs  mod.rs
src/index/: bptree.rs  btree.rs  mod.rs  skiplist.rs
src/parser/: meta_command.rs  mod.rs  query_handler.rs  stmt.rs
src/utils/: file.rs
