[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
bincode = "1.3.3"
serde_json = "1.0"
bytes = "1.6.0"
prost = "0.12.4"
crc32fast = "1.3.2"

[dependencies.log]
features = ["kv"]
