[package]
name = "smallDB"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_operation"
path = "example/basic_operation.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
bincode = "1.3.3"
serde_json = "1.0"
bytes = "1.6.0"
prost = "0.12.4"
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"
fs2 = "0.4.3"
memmap2 = "0.9.4"

[dependencies.log]
features = ["kv"]
